# Local-LLM-Setup-Tutorial

./: README.md  pyproject.toml
src/local_llm_setup_tutorial/: __init__.py  __main__.py
src/local_llm_setup_tutorial/crewai/: __init__.py  crewai_tut.py
src/local_llm_setup_tutorial/crewai/basic_example/: __init__.py
src/local_llm_setup_tutorial/crewai/basic_example/config/: agents.yaml  tasks.yaml
src/local_llm_setup_tutorial/crewai/trip_planner/: __init__.py  crew.py  trip_agent.py
src/local_llm_setup_tutorial/crewai/trip_planner/tools/: __init__.py  browser_tools.py  calculator_tools.py  search_tools.py
src/local_llm_setup_tutorial/gpt_researcher/basic_example/: __init__.py  __main__.py  config.json  research.py
