[project]
name = "local-llm-setup-tutorial"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sanjay", email = "44315700+sanjumsanthosh@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"local-llm-setup-tutorial" = "local_llm_setup_tutorial:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/local_llm_setup_tutorial"]
